McKinseyTest/force-app/main/default/objects/Case/fields/Planet_Code__c.field-meta.xml
<CustomField>
    <fullName>Planet_Code__c</fullName>
    <formula>Planet__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Code</label>
    <type>Text</type>
</CustomField>