McKinseyTest/force-app/main/default/objects/Case/fields/Planet_Name__c.field-meta.xml
<CustomField>
    <fullName>Planet_Name__c</fullName>
    <formula>Planet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Name</label>
    <type>Text</type>
</CustomField>