McKinseyTest/force-app/main/default/objects/Case/fields/SuccessfulScan__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulScan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escaneo Exitoso</label>
    <type>Checkbox</type>
</CustomField>